crates/replique/tests/snapshots/corpus__lets.snap
---
source: crates/replique/tests/corpus.rs
expression: "render(& src, & parsed)"
---
== nodes ==
node start
  set gold "10" @2:1 "[let $gold = 10]"
  set name "\"Alice\"" @3:1 "[let $name = \"Alice\"]"
  line Alice "J'ai de l'or." @4:1 "Alice: J'ai de l'or."
  choice-group @5:1 "-> Dépenser\n    [let $gold = $gold - 5]\n    Alice: Il m'en reste.\n-> Garder\n    [let $greedy = true]"
    choice "Dépenser" @5:1 "-> Dépenser\n    [let $gold = $gold - 5]\n    Alice: Il m'en reste."
      set gold "$gold - 5" @6:5 "[let $gold = $gold - 5]"
      line Alice "Il m'en reste." @7:5 "Alice: Il m'en reste."
    choice "Garder" @8:1 "-> Garder\n    [let $greedy = true]"
      set greedy "true" @9:5 "[let $greedy = true]"
  command show ["$gold"] @10:4 "show($gold)"

== diagnostics ==
(none)
