crates/replique/tests/snapshots/corpus__minimal.snap
---
source: crates/replique/tests/corpus.rs
expression: "render(& src, & parsed)"
---
== nodes ==
node start
  line Alice "Salut" @2:1 "Alice: Salut"

== diagnostics ==
(none)
