crates/replique/tests/snapshots/corpus__outside.snap
---
source: crates/replique/tests/corpus.rs
expression: "render(& src, & parsed)"
---
== nodes ==
node start
  line Alice "Enfin." @4:1 "Alice: Enfin."

== diagnostics ==
error content-outside-node @1:1 "Alice: Salut"
